feat: add JVM runtime documentation, articles, and reference dictionary entries